fix ecosystem, spacing

--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -1,10 +1,6 @@
 .header {
   @include bgGradient;
-  padding: 6rem 0 12rem 0;
-
-  &__content {
-    padding: 6rem 2rem;
-  }
+  padding: 8rem 2rem;
 
   &__text-box {
     @include flex(column);
