--- a/src/scss/layouts/_nav.scss
+++ b/src/scss/layouts/_nav.scss
@@ -4,7 +4,6 @@
   background: $primary-dark-7;
   padding: 1rem 2rem;
   @include boxShadow;
-  border-top: 1px solid $tertiary-dark-4;
 
   &__content {
     width: 100%;
